Fix overflow

--- a/src/components/Word/styles.css
+++ b/src/components/Word/styles.css
@@ -49,10 +49,9 @@ p {
   color: hsl(217 10% 70% / 1);
 
   .word-name {
-    /* white-space: nowrap; */
-
     &.active {
       color: #102e5e;
+      white-space: nowrap;
     }
 
     &:not(.active) {
